split pages, add fade-out style

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Your Name</title>
+    <title>About - Your Name</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,11 +21,10 @@
         </nav>
     </header>
 
-    <section id="home">
-        <div class="hero-content">
-            <h2>Unique & Creative T-Shirt Designs</h2>
-            <p>Explore my collection of custom-made designs perfect for any occasion.</p>
-            <a href="designs.html" class="btn">View Designs</a>
+    <section id="about">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>I'm a passionate T-shirt designer with years of experience in creating unique and visually striking designs.</p>
         </div>
     </section>
 
