--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Your Name</title>
+    <title>Contact - Your Name</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,11 +21,16 @@
         </nav>
     </header>
 
-    <section id="home">
-        <div class="hero-content">
-            <h2>Unique & Creative T-Shirt Designs</h2>
-            <p>Explore my collection of custom-made designs perfect for any occasion.</p>
-            <a href="designs.html" class="btn">View Designs</a>
+    <section id="contact">
+        <div class="container">
+            <h2>Contact Me</h2>
+            <p>Have a question or want to work together? Reach out to me!</p>
+            <form action="#" method="post">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" placeholder="Your Message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
         </div>
     </section>
 
