--- a/designs.html
+++ b/designs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Your Name</title>
+    <title>Designs - Your Name</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,11 +21,22 @@
         </nav>
     </header>
 
-    <section id="home">
-        <div class="hero-content">
-            <h2>Unique & Creative T-Shirt Designs</h2>
-            <p>Explore my collection of custom-made designs perfect for any occasion.</p>
-            <a href="designs.html" class="btn">View Designs</a>
+    <section id="designs">
+        <div class="container">
+            <h2>My T-Shirt Designs</h2>
+            <div class="design-gallery">
+                <div class="design-item">
+                    <img src="path/to/your/tshirt-design1.jpg" alt="T-shirt Design 1">
+                    <h3>Design Title 1</h3>
+                </div>
+
+                <div class="design-item">
+                    <img src="path/to/your/tshirt-design2.jpg" alt="T-shirt Design 2">
+                    <h3>Design Title 2</h3>
+                </div>
+
+                <!-- Add more designs as needed -->
+            </div>
         </div>
     </section>
 
