remove contact page

--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Your Name</title>
+    <title>About Me - Your Name</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,8 +16,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="designs.html">Designs</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About Me</a></li>
             </ul>
         </nav>
     </header>
@@ -24,7 +24,7 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>I'm a passionate T-shirt designer with years of experience in creating unique and visually striking designs.</p>
+            <p>I'm a passionate T-shirt designer with years of experience in creating unique and visually striking designs. My work is inspired by [insert inspirations here] and focuses on [insert focus here].</p>
         </div>
     </section>
 
