Enhance site layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Your Name</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <title>Your Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,18 +15,36 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="designs.html">Designs</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="about.html">About Me</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="home">
+    <section id="hero">
         <div class="hero-content">
-            <h2>Unique & Creative T-Shirt Designs</h2>
-            <p>Explore my collection of custom-made designs perfect for any occasion.</p>
-            <a href="designs.html" class="btn">View Designs</a>
+            <h2>Creative Design Solutions</h2>
+            <p>Transforming ideas into visually stunning designs.</p>
+            <a href="projects.html" class="btn">View My Work</a>
         </div>
+    </section>
+
+    <section id="projects-preview">
+        <h2>Featured Projects</h2>
+        <div class="project-cards">
+            <div class="project-card">
+                <img src="path/to/image1.jpg" alt="Project 1">
+                <h3>Project Title 1</h3>
+                <p>Brief description of the project.</p>
+            </div>
+            <div class="project-card">
+                <img src="path/to/image2.jpg" alt="Project 2">
+                <h3>Project Title 2</h3>
+                <p>Brief description of the project.</p>
+            </div>
+            <!-- Add more project cards as needed -->
+        </div>
+        <a href="projects.html" class="btn">See All Projects</a>
     </section>
 
     <script src="script.js"></script>
