--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Your Name</title>
+    <title>Projects - Your Name</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -21,11 +21,22 @@
         </nav>
     </header>
 
-    <section id="about-me">
+    <section id="projects">
         <div class="container">
-            <h2>About Me</h2>
-            <p>I'm a passionate designer with a knack for creating visually appealing and user-friendly designs. With a background in [Your Background], I bring a unique perspective to each project I work on.</p>
-            <p>Whether it's web design, graphic design, or branding, I focus on delivering quality work that aligns with the client's vision and goals.</p>
+            <h2>My Projects</h2>
+            <div class="project-gallery">
+                <div class="project-item">
+                    <img src="path/to/your/image1.jpg" alt="Project 1">
+                    <h3>Project Title 1</h3>
+                    <p>Brief description of the project.</p>
+                </div>
+                <div class="project-item">
+                    <img src="path/to/your/image2.jpg" alt="Project 2">
+                    <h3>Project Title 2</h3>
+                    <p>Brief description of the project.</p>
+                </div>
+                <!-- Add more project items here -->
+            </div>
         </div>
     </section>
 
