Customize portfolio website

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Your Name</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,17 +15,16 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="designs.html">Designs</a></li>
                 <li><a href="about.html">About Me</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="about-me">
+    <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>I'm a passionate designer with a knack for creating visually appealing and user-friendly designs. With a background in [Your Background], I bring a unique perspective to each project I work on.</p>
-            <p>Whether it's web design, graphic design, or branding, I focus on delivering quality work that aligns with the client's vision and goals.</p>
+            <p>I'm a passionate T-shirt designer with years of experience in creating unique and visually striking designs. My work is inspired by [insert inspirations here] and focuses on [insert focus here].</p>
         </div>
     </section>
 
