Added decorative images between sections

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Designs - Your Name</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <title>Your Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,29 +14,54 @@
                 <h1>Your Name</h1>
             </div>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="designs.html">Designs</a></li>
-                <li><a href="about.html">About Me</a></li>
+                <li><a href="#designs">Designs</a></li>
+                <li><a href="#about-me">About Me</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="designs">
+        <div class="hero-content">
+            <h2>Creative Design Solutions</h2>
+            <p>Transforming ideas into visually stunning designs.</p>
+            <a href="#designs" class="btn">View Designs</a>
+        </div>
+    </section>
+
+    <!-- Decorative Image Section -->
+    <section class="decorative-image">
+        <img src="path/to/decorative-image1.jpg" alt="Decorative Image 1">
+    </section>
+
+    <section id="designs">
         <div class="container">
-            <h2>My T-Shirt Designs</h2>
-            <div class="design-gallery">
-                <div class="design-item">
-                    <img src="path/to/your/tshirt-design1.jpg" alt="T-shirt Design 1">
+            <h2>My Designs</h2>
+            <div class="project-gallery">
+                <div class="project-item">
+                    <img src="path/to/your/image1.jpg" alt="Design 1">
                     <h3>Design Title 1</h3>
+                    <p>Brief description of the design.</p>
                 </div>
-
-                <div class="design-item">
-                    <img src="path/to/your/tshirt-design2.jpg" alt="T-shirt Design 2">
+                <div class="project-item">
+                    <img src="path/to/your/image2.jpg" alt="Design 2">
                     <h3>Design Title 2</h3>
+                    <p>Brief description of the design.</p>
                 </div>
-
-                <!-- Add more designs as needed -->
+                <!-- Add more design items here -->
             </div>
+        </div>
+    </section>
+
+    <!-- Another Decorative Image Section -->
+    <section class="decorative-image">
+        <img src="path/to/decorative-image2.jpg" alt="Decorative Image 2">
+    </section>
+
+    <section id="about-me">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>I'm a passionate designer with a knack for creating visually appealing and user-friendly designs. With a background in [Your Background], I bring a unique perspective to each project I work on.</p>
+            <p>Whether it's web design, graphic design, or branding, I focus on delivering quality work that aligns with the client's vision and goals.</p>
         </div>
     </section>
 
