Added full-screen sections with decorative images

--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
         </nav>
     </header>
 
-    <section id="designs">
+    <section id="designs" class="full-screen">
         <div class="hero-content">
             <h2>Creative Design Solutions</h2>
             <p>Transforming ideas into visually stunning designs.</p>
-            <a href="#designs" class="btn">View Designs</a>
+            <a href="#my-designs" class="btn">View Designs</a>
         </div>
     </section>
 
     <!-- Decorative Image Section -->
-    <section class="decorative-image">
+    <section class="decorative-image full-screen">
         <img src="path/to/decorative-image1.jpg" alt="Decorative Image 1">
     </section>
 
-    <section id="designs">
+    <section id="my-designs" class="full-screen">
         <div class="container">
             <h2>My Designs</h2>
             <div class="project-gallery">
@@ -53,11 +53,11 @@
     </section>
 
     <!-- Another Decorative Image Section -->
-    <section class="decorative-image">
+    <section class="decorative-image full-screen">
         <img src="path/to/decorative-image2.jpg" alt="Decorative Image 2">
     </section>
 
-    <section id="about-me">
+    <section id="about-me" class="full-screen">
         <div class="container">
             <h2>About Me</h2>
             <p>I'm a passionate designer with a knack for creating visually appealing and user-friendly designs. With a background in [Your Background], I bring a unique perspective to each project I work on.</p>
