--- a/designs.html
+++ b/designs.html
@@ -26,12 +26,12 @@
             <h2>My T-Shirt Designs</h2>
             <div class="design-gallery">
                 <div class="design-item">
-                    <img src="path/to/your/tshirt-design1.jpg" alt="T-shirt Design 1">
+                    <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 1">
                     <h3>Design Title 1</h3>
                 </div>
 
                 <div class="design-item">
-                    <img src="path/to/your/tshirt-design2.jpg" alt="T-shirt Design 2">
+                    <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 2">
                     <h3>Design Title 2</h3>
                 </div>
 
