--- a/designs.html
+++ b/designs.html
@@ -25,20 +25,44 @@
         <div class="container">
             <h2>My T-Shirt Designs</h2>
             <div class="design-gallery">
+                <!-- Add your 20 design items here -->
                 <div class="design-item">
                     <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 1">
-                    <h3>Design Title 1</h3>
                 </div>
-
                 <div class="design-item">
                     <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 2">
-                    <h3>Design Title 2</h3>
                 </div>
-
-                <!-- Add more designs as needed -->
+                <div class="design-item">
+                    <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 3">
+                </div>
+                <div class="design-item">
+                    <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 4">
+                </div>
+                <div class="design-item">
+                    <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 5">
+                </div>
+                <div class="design-item">
+                    <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 6">
+                </div>
+                <div class="design-item">
+                    <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 7">
+                </div>
+                <div class="design-item">
+                    <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 8">
+                </div>
+                <div class="design-item">
+                    <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 9">
+                </div>
+                <!-- Continue adding more designs -->
             </div>
         </div>
     </section>
+
+    <!-- Lightbox Modal -->
+    <div id="lightbox" class="lightbox">
+        <span class="close-btn" onclick="closeLightbox()">&times;</span>
+        <img class="lightbox-img" id="lightbox-img" src="" alt="">
+    </div>
 
     <script src="script.js"></script>
 </body>
