--- a/about.html
+++ b/about.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Your Name</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <title>28 Rainy Days</title>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Tint&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <h1>Your Name</h1>
+                <h1>28 Rainy Days</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -26,6 +26,17 @@
             <p>I'm a passionate T-shirt designer with years of experience in creating unique and visually striking designs. My work is inspired by [insert inspirations here] and focuses on [insert focus here].</p>
         </div>
     </section>
+
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2024 28 Rainy Days. All Rights Reserved.</p>
+            <ul class="social-links">
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Instagram</a></li>
+            </ul>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
