--- a/designs.html
+++ b/designs.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Designs - Your Name</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <title>28 Rainy Days</title>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Tint&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <h1>Your Name</h1>
+                <h1>28 Rainy Days</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -27,31 +27,52 @@
             <div class="design-gallery">
                 <!-- Add your 20 design items here -->
                 <div class="design-item">
-                    <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 1">
+                    <img src="graphics/drive-download/babcia narty.png" alt="T-shirt Design 1">
                 </div>
                 <div class="design-item">
-                    <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 2">
+                    <img src="graphics/drive-download/Beer.png" alt="T-shirt Design 2">
                 </div>
                 <div class="design-item">
-                    <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 3">
+                    <img src="graphics/drive-download/BEHIND EVERY STRONG WOMEN.png" alt="T-shirt Design 3">
                 </div>
                 <div class="design-item">
-                    <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 4">
+                    <img src="graphics/drive-download/BITCH DO I LOOK.png" alt="T-shirt Design 4">
                 </div>
                 <div class="design-item">
-                    <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 5">
+                    <img src="graphics/drive-download/Call me.png" alt="T-shirt Design 5">
                 </div>
                 <div class="design-item">
-                    <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 6">
+                    <img src="graphics/drive-download/Catzz (1).png" alt="T-shirt Design 6">
                 </div>
                 <div class="design-item">
-                    <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 7">
+                    <img src="graphics/drive-download/DYSLEXIC.png" alt="T-shirt Design 7">
                 </div>
                 <div class="design-item">
-                    <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 8">
+                    <img src="graphics/drive-download/FUCK Bitches.png" alt="T-shirt Design 8">
                 </div>
                 <div class="design-item">
-                    <img src="graphics/greg-nsplash.jpg" alt="T-shirt Design 9">
+                    <img src="graphics/drive-download/It’s not supposed to be forever.png" alt="T-shirt Design 9">
+                </div>
+                <div class="design-item">
+                    <img src="graphics/drive-download/Kopia – Cowboy.png" alt="T-shirt Design 10">
+                </div>
+                <div class="design-item">
+                    <img src="graphics/drive-download/LOOKING AT DRUNK TEXTES.png" alt="T-shirt Design 11">
+                </div>
+                <div class="design-item">
+                    <img src="graphics/drive-download/modliszka.png" alt="T-shirt Design 12">
+                </div>
+                <div class="design-item">
+                    <img src="graphics/drive-download/SILENCIO PUTA.png" alt="T-shirt Design 13">
+                </div>
+                <div class="design-item">
+                    <img src="graphics/drive-download/snake.png" alt="T-shirt Design 14">
+                </div>
+                <div class="design-item">
+                    <img src="graphics/drive-download/Tekst akapitu.png" alt="T-shirt Design 15">
+                </div>
+                <div class="design-item">
+                    <img src="graphics/drive-download/Wishes 2.png" alt="T-shirt Design 16">
                 </div>
                 <!-- Continue adding more designs -->
             </div>
@@ -64,6 +85,17 @@
         <img class="lightbox-img" id="lightbox-img" src="" alt="">
     </div>
 
-    <script src="script.js"></script>
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2024 28 Rainy Days. All Rights Reserved.</p>
+            <ul class="social-links">
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Instagram</a></li>
+            </ul>
+        </div>
+    </footer>
+    
+    <script src="script.js"></script>    
 </body>
 </html>
